Fixed carousel item overflowing viewport on mobile

--- a/frontend/wwwroot/scss/base/interactive_elements.scss
+++ b/frontend/wwwroot/scss/base/interactive_elements.scss
@@ -516,10 +516,12 @@ table tbody tr.active-row {
 .carousel {
     position: relative;
     width: 100%;
-    overflow: hidden; /* Ensures no vertical scroll leaks */
+    overflow: hidden;
+    /* Ensures no vertical scroll leaks */
 }
 
-.carousel-content, .carousel-pagination__content {
+.carousel-content,
+.carousel-pagination__content {
     list-style: none;
 
     overflow-x: scroll;
@@ -542,19 +544,22 @@ table tbody tr.active-row {
 
 .carousel-content {
     display: flex;
-    gap: 50px; /* Consistent gap calculation */
+    gap: 50px;
+    /* Consistent gap calculation */
     padding: 10px 50px;
     width: 100%;
     height: 100%;
-        touch-action: none;
+    touch-action: none;
 }
 
 .carousel-pagination__content {
     display: flex;
 }
 
-.carousel-content::-webkit-scrollbar, .carousel-pagination::-webkit-scrollbar {
-    display: none; /* Hide scrollbar in Chrome/Safari */
+.carousel-content::-webkit-scrollbar,
+.carousel-pagination::-webkit-scrollbar {
+    display: none;
+    /* Hide scrollbar in Chrome/Safari */
 }
 
 .carousel-content,
@@ -569,13 +574,9 @@ table tbody tr.active-row {
 }
 
 .carousel-item {
-    // flex-grow: 1;
-    // width: 80%;
-    // max-width: 100%;
-    // display: inline-block;
     @extend %flex--row--center;
     flex-shrink: 0;
-    // flex: 0 0 100%; // Each item occupies 100% of viewport width, does not shrink or grow
+    max-width: 100%;
 
     background-color: #FFF;
     // display: inline-block;
@@ -591,7 +592,8 @@ table tbody tr.active-row {
 .carousel-pagination {
     display: flex;
     justify-content: center;
-    width: 100%;;
+    width: 100%;
+    ;
     gap: 8px;
     margin-top: 10px;
 }
@@ -612,11 +614,11 @@ table tbody tr.active-row {
     width: 150px;
     height: 150px;
 
-    > * {
-        max-width: 100%;               // shrink horizontally if needed
-        max-height: 100%;              // shrink vertically if needed
-        height: auto;                  // keep aspect ratio
-        object-fit: contain;           // maintain the aspect ratio within bounds
+    >* {
+        max-width: 100%; // shrink horizontally if needed
+        max-height: 100%; // shrink vertically if needed
+        height: auto; // keep aspect ratio
+        object-fit: contain; // maintain the aspect ratio within bounds
     }
 }
 
